fix(style): download icon is properly aligned in Firefox

--- a/grapher/downloadTab/DownloadTab.scss
+++ b/grapher/downloadTab/DownloadTab.scss
@@ -55,16 +55,12 @@
         }
     }
 
-    .grouped-menu-icon {
-        flex: 0;
-
-        img {
-            display: block;
-            margin: 10px;
-            margin-right: 3px;
-            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15),
-                0 2px 4px 1px rgba(0, 0, 0, 0.09);
-        }
+    .grouped-menu-icon img {
+        display: block;
+        margin: 10px;
+        margin-right: 3px;
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15),
+            0 2px 4px 1px rgba(0, 0, 0, 0.09);
     }
 
     .grouped-menu-content {
